--- a/index.html
+++ b/index.html
@@ -50,26 +50,22 @@
 
         <ul class="contacts-list list box">
           <li class="contacts-item">
-            <div class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-contacts link">
               <svg class="contacts-icon" width="16" height="12">
                 <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>
-              <a href="mailto:info@devstudio.com" class="header-contacts link"
-                >info@devstudio.com</a
-              >
-            </div>
+              info@devstudio.com</a
+            >
           </li>
-          <li>
-            <div class="contacts-item">
+          <li class="contacts-item">
+            <a href="tel:+380961111111" class="header-contacts link">
               <svg class="contacts-icon" width="10" height="16">
                 <use
                   href="./images/icons/symbol-defs.svg#icon-smartphone"
                 ></use>
               </svg>
-              <a href="tel:+380961111111" class="header-contacts link"
-                >+38 096 111 11 11</a
-              >
-            </div>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
