--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <!-- header navigation -->
     <header class="header">
       <div class="conteiner box">
-        <a href="/" class="header-logo link"
+        <a href="./index.html" class="header-logo link"
           ><span class="logo-text">Web</span>Studio</a
         >
 
